# sabina_calc

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/CMAKE for M1 without gtest and lcov/: CMakeLists.txt
src/controller/: controller.cc  controller.h
src/graph/: graphview.cc  graphview.h
src/graph/qcustomplot/: qcustomplot.cpp
src/manual/: manual.md
src/model/: calcmodel.cc  calcmodel.h  s21_parser.cc  s21_parser.h  s21_validator.cc  s21_validator.h
src/tests/: test.cc
src/view/: calcview.cc  calcview.h
